// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrate tCore resources test with no user resources 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources test with old en_ult - should delete old version 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources test with old tHelps resources - should delete 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources test with t4t - should not delete 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources test with t4t, old tHelps resources and not up to date resources - should remove old helps and keep old bibles 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources test with t4t, old tHelps resources and up to date resources - should not delete anything 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
  "<HOME_DIR>/translationCore/resources/x-test/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources test with t4t, old tHelps resources and up to date resources - should not delete anything 2`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
  "<HOME_DIR>/translationCore/resources/x-test/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources test with t4t, old tHelps resources, up to date resources and different app version - should remove old helps and keep old bibles 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;
